<resources>
    <string name="app_name" translatable="false">Aviles &amp; Norling</string>
    <string name="venta">Venta</string>
    <string name="alquiler">Alquiler</string>
    <string name="vacaciones">Vacaciones</string>
    <string name="espanol" translatable="false">Español</string>
    <string name="ingles" translatable="false">English</string>
    <string name="aleman" translatable="false">Deutsch</string>
    <string name="frances" translatable="false">Français</string>
    <string name="sueco" translatable="false">Svenska</string>
    <string name="referencia">Referencia</string>
    <string name="oferta">Oferta</string>
    <string name="tipoInmueble">Tipo inmueble</string>
    <string name="dormitorios">Dormitorios</string>
    <string name="superficie">Sup. Desde</string>
    <string name="personas">Nº Personas</string>
    <string name="fecha">Fecha</string>
    <string name="buscar">Buscar</string>
    <string name="precioDesde">Precio Desde</string>
    <string name="precioHasta">Precio Hasta</string>
    <string name="descripcion">Descripción:</string>
    <string name="caracteristicas">Características:</string>
    <string name="reservar">Reservar</string>
    <string name="pisos">Pisos</string>
    <string name="casas">Casas</string>
    <string name="locales">Locales</string>
    <string name="tiendas">Tiendas</string>
    <string name="tipo">Tipo</string>
    <string name="zona">Zona</string>
    <string name="contacto">Contacto</string>
    <string name="fechaNoValida">La fecha indicada no es válida</string>
    <string name="noSePudoConectar">No se pudo conectar con la base de datos. Vuelve a intentarlo más tarde</string>
    <string name="valoresInvalidos">Los valores introducidos no son válidos. Vuelve a intentarlo</string>
    <string name="estudio">Estudio</string>
    <string name="apartamento">Apartamento</string>
    <string name="piso">Piso</string>
    <string name="casa">Casa</string>
    <string name="chalet">Chalet</string>
    <string name="duplex">Dúplex</string>
    <string name="villa">Villa</string>
    <string name="local">Local</string>
    <string name="propiedad">Propiedad</string>
    <string name="en">en</string>
    <string name="generales">Generales</string>
    <string name="superficies">Superficies</string>
    <string name="equipamientos">Equipamientos</string>
    <string name="calidades">Calidades</string>
    <string name="codigoTuristico">Código Turístico</string>
    <string name="ascensor">Ascensor</string>
    <string name="salones">salones</string>
    <string name="banos">baños</string>
    <string name="empotrados">armarios empotrados</string>
    <string name="terrazas">terrazas</string>
    <string name="lavadero">Lavadero</string>
    <string name="construido">Constr.</string>
    <string name="util">Útil</string>
    <string name="piscina">Piscina</string>
    <string name="jardines">Jardines</string>
    <string name="cocinaIndependiente">Cocina independiente</string>
    <string name="cocinaAmericana">Cocina americana</string>
    <string name="cocinaAmueblada">Cocina amueblada</string>
    <string name="electrodomesticos">Electrodomésticos</string>
    <string name="instalacion">Aire Acondicionado / Instalación</string>
    <string name="climatizador">A/C Climatizador</string>
    <string name="preinstalacion">Aire Acondicionado / Preinstalación</string>
    <string name="central">Aire acondicionado central</string>
    <string name="portero">Portero automático</string>
    <string name="videoportero">Video-portero</string>
    <string name="soleriaCeramica">Solería de cerámica</string>
    <string name="soleriaParquet">Solería de parquet</string>
    <string name="tarima">Tarima</string>
    <string name="soleriaMarmol">Solería de mármol</string>
    <string name="zonaUrbana">Zona urbana</string>
    <string name="urbanizacion">Urbanización</string>
    <string name="metrosPlaya">A 500 metros de la playa</string>
    <string name="segundaLinea">2ª Línea de playa</string>
    <string name="primeraLinea">1ª Línea de playa</string>
    <string name="zonaCostera">En zona costera</string>
    <string name="orientacionEste">Orientación este</string>
    <string name="orientacionOeste">Orientación oeste</string>
    <string name="orientacionSur">Orientación sur</string>
    <string name="orientacionSuroste">Orientación suroeste</string>
    <string name="orientacionSureste">Orientación sureste</string>
    <string name="orientacionNoroste">Orientación noroeste</string>
    <string name="escuelas">Escuelas</string>
    <string name="zonasDeportivas">Zonas deportivas</string>
    <string name="zonasVerdes">Zonas verdes</string>
    <string name="bus">Bus</string>
    <string name="planta">ª planta</string>
    <string name="situacion">Situación</string>
    <string name="cercaDe">Cerca de</string>
    <string name="comunicaciones">Comunicaciones</string>
    <string name="consultar">A consultar</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="mensaje">Mensaje</string>
    <string name="politicaPrivacidad">Acepto la política de privacidad</string>
    <string name="contactar">Contactar</string>
    <string name="aceptarPolitica">Debes aceptar la política de privacidad</string>
    <string name="rellenarCampos">Debes rellenar todos los campos</string>
    <string name="entrada">Entrada</string>
    <string name="salida">Salida</string>
</resources>