<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MenuPrincipal">

    <LinearLayout
        android:id="@+id/redesIdioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/imgWhatsapp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/whatsapp" />

        <ImageView
            android:id="@+id/imgFacebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/imgTwitter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/twitter" />

        <ImageView
            android:id="@+id/imgLinkedin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/linkedin" />

        <ImageView
            android:id="@+id/imgYoutube"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/youtube" />

        <ImageView
            android:id="@+id/imgInstagram"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/instagram" />

        <Spinner
            android:id="@+id/spinnerIdiomas"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imgCasa"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/casa" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redesIdioma" />

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo">

        <Button
            android:id="@+id/btnVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/venta" />

        <Button
            android:id="@+id/btnAlquiler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alquiler" />

        <Button
            android:id="@+id/btnVacaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vacaciones" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>